Fix layout bugs, hide Imgur upload option unless API key is set

--- a/public/styles.css
+++ b/public/styles.css
@@ -60,8 +60,7 @@ hr {
 }
 
 .footer {
-	display: inline-block;
-	max-width: 600px;
+	display: block;
 	margin-top: 0;
 	margin-bottom: 20px;
 	margin-left: 20px;
